--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alex Feng",
   "license": "ISC",
-  "description": "",
+  "description": "backend for CareerMateAI",
   "dependencies": {
     "express": "^5.2.1",
     "react": "^19.2.4"
